--- a/templates/post/_one_post.html.twig
+++ b/templates/post/_one_post.html.twig
@@ -6,7 +6,7 @@
         <div class="col-lg-12">
 
             <div class="content">
-                {{ post.getPreviewText()|purify }}
+                {{ textTrimmer.trim(post, previewLength)|purify }}
             </div>
         </div>
         <div class="col-lg-12">
